--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.9.0",
+    "redux": "^5.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.6.1"
   },
